# classhub

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Evaluation.md  README.md  bandit.yaml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  run_smoke_test.sh  setup_docs.sh  sitemap.xml  test_student_view.py
.github/: pull_request_template.md
ARCHITECTURE/: index.html
BOOTSTRAP_SERVER/: index.html
CLASS_CODE_AUTH/: index.html
CONTRIBUTING_DOCS/: index.html
COURSE_AUTHORING/: index.html
DAY1_DEPLOY_CHECKLIST/: index.html
DECISIONS/: index.html
DEVELOPMENT/: index.html
DISASTER_RECOVERY/: index.html
HELPER_EVALS/: index.html
HELPER_POLICY/: index.html
LEARNING_PATHS/: index.html
MERGE_READINESS/: index.html
NON_DEVELOPER_GUIDE/: index.html
OPENAI_HELPER/: index.html
PILOT_PLAYBOOK/: index.html
PRIVACY-ADDENDUM/: index.html
PUBLIC_OVERVIEW/: index.html
RELEASING/: index.html
REQUEST_SAFETY/: index.html
RUNBOOK/: index.html
SECURITY/: index.html
SECURITY_BASELINE/: index.html
START_HERE/: index.html
TEACHER_HANDOFF_CHECKLIST/: index.html
TEACHER_HANDOFF_RECORD_TEMPLATE/: index.html
TEACHER_PORTAL/: index.html
TEACHING_PLAYBOOK/: index.html
TROUBLESHOOTING/: index.html
TRY_IT_LOCAL/: index.html
WHAT_WHERE_WHY/: index.html
compose/: .env.example  .env.example.domain  .env.example.local  Caddyfile  Caddyfile.domain  Caddyfile.local  (+3 more)
services/common/: README.md  csp.py  helper_scope.py  pseudonyms.py  pyproject.toml
services/common/request_safety/: __init__.py
(+413 files in other folders)
